# Blockchain

./: .gitignore  Cargo.toml  LICENSE  README.md  check  checklist.md  fork_choice_sync_todos.md  main.asm
.github/: CODEOWNERS
.github/workflows/: CI.yml
blockchain_derive/: Cargo.toml
blockchain_derive/src/: binary_codec.rs  error.rs  lib.rs
example_contracts/: erc20-token.asm  factorial.asm  factorial.audit.txt  main.audit.txt  main2.asm  main2.audit.txt
src/: lib.rs  main.rs  test_utils.rs
src/core/: account.rs  block.rs  blockchain.rs  consensus.rs  mod.rs  receipt.rs  storage.rs  transaction.rs  validator.rs
src/crypto/: key_pair.rs  mod.rs
src/network/: libp2p_transport.rs  local_transport.rs  message.rs  mod.rs  rpc.rs  server.rs  sync.rs  tcp_transport.rs  transport.rs  txpool.rs
src/storage/: main_storage.rs  mod.rs  rocksdb_storage.rs  state.rs  state_store.rs  state_view.rs  storage_trait.rs  test_storage.rs  txpool.rs
src/types/: address.rs  array.rs  binary_codec.rs  bytes.rs  encoding.rs  hash.rs  merkle_tree.rs  mod.rs  serializable_bytes.rs  serializable_signature.rs  wrapper_types.rs
src/utils/: log.rs  mod.rs  test_utils.rs
src/virtual_machine/: assembler.rs  errors.rs  isa.rs  isa_static_check.rs  mod.rs  operand.rs  program.rs  state.rs  vm.rs
src/virtual_machine/vm/: context.rs  gas.rs  heap.rs  registers.rs  tests.rs
