[package]
name = "Blockchain"
version = "0.11.4"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-util", "signal"] }
sha3 = "0.10.8"
k256 = "=0.13.4"
rand_core = "=0.6.4"
blockchain_derive = { path = "blockchain_derive" }
dashmap = "6.1.0"
futures = "0.3.31"
libp2p = { version = "0.56", features = ["tcp", "noise", "yamux", "request-response", "identify", "tokio", "macros"] }
termcolor = "1.4.1"
dirs = "6.0"
fs2 = "0.4"
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
rpassword = "7"

[dev-dependencies]
tempfile = "3"
