[package]
name = "blockchain"
version = "0.16.5"
edition = "2024"
default-run = "blockchain"

[dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-util", "signal"] }
sha3 = "0.10.8"
k256 = "=0.13.4"
rand_core = "=0.6.4"
blockchain_derive = { path = "blockchain_derive" }
dashmap = "6.1.0"
futures = "0.3.31"
libp2p = { version = "0.56.0", features = ["tcp", "noise", "yamux", "request-response", "identify", "tokio", "macros"] }
termcolor = "1.4.1"
dirs = "6.0.0"
fs2 = "0.4.3"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
zeroize = { version = "1.8.2", features = ["derive"] }
rpassword = "7.4.0"
sparse-merkle-tree = "0.6.1"

[dev-dependencies]
tempfile = "3.24.0"
